--- a/backend/src/components/Dashboard/SideBar.css
+++ b/backend/src/components/Dashboard/SideBar.css
@@ -29,6 +29,9 @@
     left: -100%;
     height: 100%;
     padding: 20px 0 0 30px;
+    border-bottom: 1px solid white;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    
 
     
 }
@@ -40,3 +43,77 @@ a:hover{
     background-color: goldenrod;
     width: 260px;
 }
+
+.sub_counties {
+    position: relative;
+    max-width: 21rem;
+    height: 15rem;
+    margin: 2rem auto;
+    padding: 2em;
+    border-radius: 0.75em;
+    box-shadow: 5px 5px 20px rgba(0 0 0/0.15);
+    text-align: left;
+    transition: transform 200ms ease-in;
+    background-color: #ffffff;
+  }
+  
+.section__title {
+    margin: 0 auto;
+    max-width: 90%;
+    font-size: 1.65rem;
+    font-weight: 300;
+    line-height: 1.5em;
+    text-align: center;
+  }
+
+
+  .SamburuNorth {
+  border-top: 5px solid #464644;
+}
+
+.SamburuEast {
+    border-top: 5px solid #464644;
+  }
+  .SamburuWest {
+    border-top: 5px solid #464644;
+  }
+  @media (min-width: 1000px) {
+    body {
+      align-items: center;
+      min-height: 100vh;
+    }
+  
+    section {
+      max-width: 200rem;
+    }
+  
+    .section__title {
+      margin: 0 auto;
+      max-width: 40%;
+      font-size: 2rem;
+    }
+  
+    .section__desc {
+      max-width: 55ch;
+      margin: 1rem auto 1rem;
+    }
+  
+    .sub_counties {
+      display: flex;
+      gap: 1rem;
+    }
+  
+    .SamburuEast {
+      margin: auto 0;
+      margin-top: -100px;
+      margin-left: 100px;
+    }
+  
+    .SamburuWest {
+      margin: auto 0;
+      margin-left: 825px;
+      margin-top: -250px;
+
+    }
+  }
+  
