--- a/backend/src/components/Dashboard/SideBar.css
+++ b/backend/src/components/Dashboard/SideBar.css
@@ -4,15 +4,21 @@
 
 }
 
-.leftPanel{
-  background-color: #fff;
-  
+.leftPanel{ 
+  top: 0;
+  left: 0;
+  color: aliceblue;
+  background-color: #564242;
+  padding: 20px;
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
 }
 .section_title{
   color:black;
   margin-bottom: 20px;
 }
 .sidebar{
+  padding: 20px;
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   padding: 16px 15px;
   color: #333333;
@@ -23,7 +29,11 @@
 #icon{
   padding-right: 20px;
   font-size: 20px;
+  color: aliceblue;
 
+}
+#title{
+  color: aliceblue;
 }
 .active-link {
   font-weight:bolder;
@@ -31,12 +41,12 @@
 
 }
 .active-link #title {
-  font-weight:bolder;
+  background: #eee;
+  color: rgba(0,0,0,.7);
+  font-weight: 600
 }
 .hover-link:hover {
   background-color: #f5f5f5;
   
-
-
   
 }
